desativando os testes de integracao do travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ before_install:
 
 script:
   - ng test --watch false
-  - ng serve &
-  - ng e2e
+  - ng serve
+  # - ng e2e
 
 after_success:
   - ng build
