--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_install:
  - sudo dpkg -i google-chrome*.deb
 
 script:
-  # - ng test --watch false
+  - ng test --watch false
   # - ng serve
   # - ng e2e
 
