--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ branches:
   - master
 
 before_install:
- - npm install -g angular-cli
+ - npm install -g @angular/cli
  - npm install -g firebase-tools
  - export CHROME_BIN=/usr/bin/google-chrome
  - export DISPLAY=:99.0
