--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "bootstrap": "^3.3.7",
     "bootswatch": "^3.3.7",
     "core-js": "^2.4.1",
-	"jquery": "^3.1.1",
+    "jquery": "^3.1.1",
+    "mydatepicker": "^1.9.8",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
