--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular2-text-mask": "^8.0.1",
     "bootstrap": "^3.3.7",
     "bootswatch": "^3.3.7",
     "core-js": "^2.4.1",
     "jquery": "^3.1.1",
     "mydatepicker": "^1.9.8",
     "rxjs": "^5.1.0",
+    "text-mask-addons": "^3.5.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
