--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
   "private": true,
   "dependencies": {
     "@angular-generic-table/core": "^4.1.1",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/common": "^4.1.3",
+    "@angular/compiler": "^4.1.3",
+    "@angular/core": "^4.1.3",
+    "@angular/forms": "^4.1.3",
+    "@angular/http": "^4.1.3",
+    "@angular/platform-browser": "^4.1.3",
+    "@angular/platform-browser-dynamic": "^4.1.3",
+    "@angular/router": "^4.1.3",
     "angular2-text-mask": "^8.0.1",
+    "angularfire2": "^4.0.0-rc.0",
     "bootstrap": "^3.3.7",
     "bootswatch": "^3.3.7",
     "core-js": "^2.4.1",
+    "firebase": "^4.1.1",
     "jquery": "^3.1.1",
     "mydatepicker": "^1.9.8",
     "rxjs": "^5.1.0",
@@ -32,8 +34,8 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "^4.0.0",
+    "@angular/cli": "1.1.0",
+    "@angular/compiler-cli": "^4.1.3",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
