--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ branches:
 before_install:
  - npm install -g @angular/cli
  - npm install -g firebase-tools
+ - npm install -g bower
  - export CHROME_BIN=/usr/bin/google-chrome
  - export DISPLAY=:99.0
  - sh -e /etc/init.d/xvfb start
